added gifs and animationsD

--- a/all-products.html
+++ b/all-products.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="product.css" />
   </head>
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body sticky-top">
       <div class="container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3">
         <button
@@ -61,10 +62,8 @@
             </ul>
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
-              <div class="my-3">
-                <button
-                  class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
-                >
+              <div class="phone">
+                <button class="btn blue-bg px-3 py-2 mt-sm-2 ms-lg-3 my-2">
                   <a href="#" class="nav-link">Sign Up</a>
                 </button>
               </div>
@@ -75,21 +74,17 @@
     </nav>
     <hr />
     <main>
-      <!-- HEADER -->
-      <section
-        class="card header d-flex-column align-items-center justify-content-center mx-lg-5 mx-sm-2 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
-      >
-        <h1 class="width-title pt-5">Products</h1>
-      </section>
+      <!-- All PRODUCTS CARD -->
 
-      <!-- USE CASES -->
-      <section class="mx-auto my-4 py-lg-5">
+      <h1 class="pt-4 text-center">Products</h1>
+
+      <section class="mx-lg-2 my-2 py-lg-3">
         <div
           class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 g-4 product-card"
         >
-          <div class="card col cyan border-0 mx-2 py-2 px-3">
+          <div class="card col cyan border-0 py-2 mx-2 px-3">
             <div class="pt-lg-5">
-              <img class="py-2" src="./images/Image-Container.png" alt="" />
+              <img class="py-2 gif" src="./images/gaming-chair.gif" alt="" />
             </div>
             <div class="d-flex justify-content-between">
               <div class="py-3">
@@ -98,7 +93,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/chair.html"
                     >view product</a
                   >
@@ -108,16 +103,20 @@
           </div>
           <div class="card border-0 col blue mx-2 py-2 px-3">
             <div class="pt-lg-5">
-              <img class="py-2" src="./images/Image-Container (1).png" alt="" />
+              <img
+                class="py-2 gif"
+                src="./images/Image-Container (1).png"
+                alt=""
+              />
             </div>
+            <h6 class="card-title pt-lg-4">Kitchen Cabinet</h6>
             <div class="d-flex justify-content-between">
               <div class="py-3">
-                <h6 class="card-title">Kitchen Cabinet</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/cabinet.html"
                     >view product</a
                   >
@@ -128,8 +127,8 @@
           <div class="card border-0 col-sm purple mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/lamp.gif"
                 alt=""
               />
             </div>
@@ -140,7 +139,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/lamp.html"
                     >view product</a
                   >
@@ -151,7 +150,7 @@
           <div class="card border-0 col pink mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
+                class="text-center py-2 gif"
                 src="./images/Image-Container (2).png"
                 alt=""
               />
@@ -163,7 +162,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/table.html"
                     >view product</a
                   >
@@ -186,7 +185,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/mattress.html"
                     >view product</a
                   >
@@ -197,8 +196,8 @@
           <div class="card border-0 col blue mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/drawer.png"
                 alt=""
               />
             </div>
@@ -209,7 +208,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/drawer.html"
                     >view product</a
                   >
@@ -232,7 +231,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/painting.html"
                     >view product</a
                   >
@@ -248,14 +247,14 @@
                 alt=""
               />
             </div>
+            <h6 class="card-title pt-3">Arsenal's Star Boy</h6>
             <div class="d-flex justify-content-between">
               <div class="py-3">
-                <h6 class="card-title">Arsenal's Star Boy</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/arsenal.html"
                     >view product</a
                   >
@@ -266,8 +265,9 @@
           <div class="card border-0 col cyan mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/suitcase.gif
+                "
                 alt=""
               />
             </div>
@@ -278,7 +278,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/suitcase.html"
                     >view product</a
                   >
@@ -289,8 +289,8 @@
           <div class="card border-0 col blue mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/sofa.png"
                 alt=""
               />
             </div>
@@ -301,7 +301,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/sofa.html"
                     >view product</a
                   >
@@ -312,8 +312,8 @@
           <div class="card border-0 col purple mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/dining-table.gif"
                 alt=""
               />
             </div>
@@ -324,7 +324,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/dining.html"
                     >view product</a
                   >
@@ -335,8 +335,8 @@
           <div class="card border-0 col pink mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/cooker.gif"
                 alt=""
               />
             </div>
@@ -347,7 +347,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-2 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/gas.html"
                     >view product</a
                   >
