--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
             </ul>
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
-              <div class="my-3">
-                <button
-                  class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
-                >
+              <div class="phone">
+                <button class="btn blue-bg px-3 py-2 mt-sm-2 ms-lg-3 my-2">
                   <a href="#" class="nav-link">Sign Up</a>
                 </button>
               </div>
@@ -77,21 +75,21 @@
         class="card header d-flex-column align-items-center justify-content-center mx-lg-5 mx-sm-2 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
       >
         <h1
-          class="width-title text-center px-lg-4 ps-lg-5 pe-lg-5 mx-lg-5 pt-4"
+          class="fade-in width-title text-center px-lg-4 ps-lg-5 pe-lg-5 mx-lg-5 pt-4"
         >
           Experience shopping like never before with our augmented reality (AR)
           technology
         </h1>
-        <p class="width-text py-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
+        <p class="width-text py-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5 fade-in">
           See every product in 3D and know exactly how it will look and feel in
           your home. Shop with confidence and convenience, all thanks to our AR
           technology. Explore our collection today and see the difference for
           yourself
         </p>
-        <button class="btn orange-bg index px-4 py-3">
-          <a class="nav-link" href="./product.html">Shop now </a>
+        <button class="btn blue-bg index px-4 py-3 slide-in-left">
+          <a class="nav-link fs-6" href="./product.html">Shop now </a>
         </button>
-        <div class="header-wrap pt-5">
+        <div class="header-wrap pt-5 slide-in-right">
           <img class="header-img" src="./images/Container.png" alt="" />
         </div>
       </section>
@@ -254,7 +252,7 @@
           <div class="col-md-6 me-3 mt-sm-0 my-md-3 mx-md-4 mx-lg-0">
             <img
               src="../images/side-img.png"
-              class="img-fluid straight d-none d-lg-block d-md-block"
+              class="img straight d-none d-lg-block d-md-block"
               alt="..."
             />
           </div>
@@ -274,8 +272,8 @@
             friendly team
           </p>
         </div>
-        <button class="btn orange-bg index px-3 py-4">
-          <a class="nav-link" href="./product.html">Get in touch </a>
+        <button class="btn blue-bg index px-3 py-3">
+          <a class="nav-link fs-6" href="./product.html">Get in touch </a>
         </button>
       </section>
     </main>
