--- a/product.html
+++ b/product.html
@@ -61,10 +61,8 @@
             </ul>
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
-              <div class="my-3">
-                <button
-                  class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
-                >
+              <div class="phone">
+                <button class="btn blue-bg px-3 py-2 mt-sm-2 ms-lg-3 my-2">
                   <a href="#" class="nav-link">Sign Up</a>
                 </button>
               </div>
@@ -87,26 +85,26 @@
         </h1>
       </section>
 
-      <!-- ENHANCE -->
+      <!-- POPULAR PRODUCTS -->
       <div class="text-center ps-lg-5 ms-lg-5 py-lg-5 pt-lg-4 mt-lg-4">
         <h2 class="pt-5">Popular Products</h2>
       </div>
-      <section class="mx-auto my-4">
+      <section class="mx-lg-2 my-2 py-lg-3">
         <div
-          class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 mx-3 g-4"
+          class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 g-4 product-card"
         >
-          <div class="card col cyan border-0 mx-2 py-2 px-3">
+          <div class="card col cyan border-0 py-2 mx-2 px-3">
             <div class="pt-lg-5">
-              <img class="py-2" src="./images/Image-Container.png" alt="" />
+              <img class="py-2 gif" src="./images/gaming-chair.gif" alt="" />
             </div>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between mt-lg-4">
               <div class="py-3">
                 <h6 class="card-title">Gaming Chair</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-3 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/chair.html"
                     >view product</a
                   >
@@ -116,16 +114,20 @@
           </div>
           <div class="card border-0 col blue mx-2 py-2 px-3">
             <div class="pt-lg-5">
-              <img class="py-2" src="./images/Image-Container (1).png" alt="" />
+              <img
+                class="py-2 gif"
+                src="./images/Image-Container (1).png"
+                alt=""
+              />
             </div>
+            <h6 class="card-title pt-3">Kitchen Cabinet</h6>
             <div class="d-flex justify-content-between">
               <div class="py-3">
-                <h6 class="card-title">Kitchen Cabinet</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-3 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/cabinet.html"
                     >view product</a
                   >
@@ -136,19 +138,20 @@
           <div class="card border-0 col-sm purple mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/lamp.gif"
                 alt=""
               />
             </div>
-            <div class="d-flex justify-content-between">
-              <div class="py-2">
-                <h6 class="card-title">Table Lamp</h6>
+
+            <div class="d-flex justify-content-between mt-lg-4">
+              <div class="py-3">
+                <h6 class="card-title pb-lg-3">Table Lamp</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-3 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/lamp.html"
                     >view product</a
                   >
@@ -159,7 +162,7 @@
           <div class="card border-0 col pink mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
+                class="text-center py-2 gif"
                 src="./images/Image-Container (2).png"
                 alt=""
               />
@@ -171,7 +174,7 @@
                 <p class="card-text">N145</p>
               </div>
               <div class="align-self-end py-2">
-                <button class="btn orange-bg px-md-3 py-3">
+                <button class="btn blue-bg px-2 py-3">
                   <a class="nav-link" href="./products/table.html"
                     >view product</a
                   >
@@ -182,8 +185,10 @@
         </div>
       </section>
       <div class="d-flex justify-content-center align-items-center py-2">
-        <button class="btn orange-bg index px-3 py-4">
-          <a class="nav-link" href="./all-products.html">Explore products > </a>
+        <button class="btn blue-bg index px-3 py-3">
+          <a class="nav-link fs-6" href="./all-products.html"
+            >Explore products >
+          </a>
         </button>
       </div>
 
@@ -220,8 +225,8 @@
             friendly team
           </p>
         </div>
-        <button class="btn orange-bg index px-3 py-4">
-          <a class="nav-link" href="./product.html">Get in touch </a>
+        <button class="btn blue-bg index px-3 py-3">
+          <a class="nav-link fs-6" href="./product.html">Get in touch </a>
         </button>
       </section>
     </main>
