--- a/products/arsenal.html
+++ b/products/arsenal.html
@@ -77,9 +77,7 @@
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
               <div class="my-3">
-                <button
-                  class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
-                >
+                <button class="btn blue-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2">
                   <a>Sign Up</a>
                 </button>
               </div>
@@ -89,45 +87,6 @@
       </div>
     </nav>
     <hr />
-    <!-- Modal -->
-    <!-- <div id="md">
-      <div
-        class="modal-dialog mx-1 px-lg-3 py-2 px-sm-2 px-md-3 border-1 rounded-2 hide"
-        id="popcart"
-      >
-        <div class="modal-content">
-          <div class="modal-header">
-            <h6 class="modal-title">Cart</h6>
-            <hr />
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal-dialog"
-              aria-label="Close"
-            ></button>
-          </div>
-          <p class="empty">Cart is empty</p>
-          <div class="modbody cartbody">
-            <div class="cartdeets my-2">
-              <img
-                src="./images/image-product-1-thumbnail.jpg"
-                class="cartimg rounded-1"
-                alt=""
-              />
-              <p>
-                Fall Limited Edition Sneakers <span>$125.00</span> x 3
-                <bold class="bold">$375.00</bold>
-              </p>
-              <img src="./images/icon-delete.svg" alt="" />
-            </div>
-            <button type="button" class="btn cartbtn mx-auto d-flex mt-1">
-              Check out
-            </button>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- style="max-width: 1400px" -->
 
     <div
       class="card main mt-lg-1 mt-sm-2 align-items-center border-0 justify-content-lg-between justify-content-center"
@@ -167,7 +126,7 @@
                 <div class="btn-group" role="group" aria-label="Basic example">
                   <button
                     type="button"
-                    class="btn minus orange sign px-lg-3 py-sm-2 px-3"
+                    class="btn minus blue sign px-lg-3 py-sm-2 px-3"
                     onclick=""
                   >
                     -
@@ -180,14 +139,14 @@
                   </button>
                   <button
                     type="button"
-                    class="btn plus orange sign px-lg-3 py-sm-2 px-3"
+                    class="btn plus blue sign px-lg-3 py-sm-2 px-3"
                     onclick=""
                   >
                     +
                   </button>
                 </div>
                 <button
-                  class="btn orange-bg px-4 py-sm-2 btn-lg flex-grow-sm-1 ms-lg-4"
+                  class="btn blue-bg px-4 py-sm-2 btn-lg flex-grow-sm-1 ms-lg-4"
                   onclick="addCart()"
                   type="submit"
                 >
@@ -215,7 +174,7 @@
               <img src="../images/arsenal.png" class="img-fluid" alt="..." />
             </div>
             <div>
-              <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
+              <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
                 <a class="nav-link" href="https://arsenal-star-boy.swiftxr.app"
                   ><img src="../images/AR.png" class="vector" /> view in AR</a
                 >
