--- a/products/chair.html
+++ b/products/chair.html
@@ -77,9 +77,7 @@
             <div class="d-lg-flex mx-5">
               <a class="px-3 login align-self-center" href="#">Login</a>
               <div class="my-3">
-                <button
-                  class="btn orange-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2"
-                >
+                <button class="btn blue-bg px-md-3 py-sm-2 btn-lg mt-sm-2 mx-2">
                   <a>Sign Up</a>
                 </button>
               </div>
@@ -167,7 +165,7 @@
                 <div class="btn-group" role="group" aria-label="Basic example">
                   <button
                     type="button"
-                    class="btn minus orange sign px-lg-3 py-sm-2 px-3"
+                    class="btn minus blue sign px-lg-3 py-sm-2 px-3"
                     onclick=""
                   >
                     -
@@ -180,14 +178,14 @@
                   </button>
                   <button
                     type="button"
-                    class="btn plus orange sign px-lg-3 py-sm-2 px-3"
+                    class="btn plus blue sign px-lg-3 py-sm-2 px-3"
                     onclick=""
                   >
                     +
                   </button>
                 </div>
                 <button
-                  class="btn orange-bg px-4 py-sm-2 btn-lg flex-grow-sm-1 ms-lg-4"
+                  class="btn blue-bg px-4 py-sm-2 btn-lg flex-grow-sm-1 ms-lg-4"
                   onclick="addCart()"
                   type="submit"
                 >
@@ -215,7 +213,7 @@
               <img src="../images/chair.png" class="img-fluid" alt="..." />
             </div>
             <div>
-              <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
+              <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
                 <a class="nav-link" href="https://i4g-chair.swiftxr.app"
                   ><img src="../images/AR.png" class="vector" /> view in AR</a
                 >
