--- a/all-products.html
+++ b/all-products.html
@@ -132,8 +132,8 @@
                 alt=""
               />
             </div>
-            <div class="d-flex justify-content-between">
-              <div class="py-3">
+            <div class="d-flex justify-content-between pt-lg-2">
+              <div class="py-3 pt-lg-2">
                 <h6 class="card-title">Table Lamp</h6>
                 <p class="card-text">Furniture</p>
                 <p class="card-text">N145</p>
@@ -173,8 +173,8 @@
           <div class="card border-0 col cyan mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/mattress.png"
                 alt=""
               />
             </div>
@@ -217,12 +217,8 @@
             </div>
           </div>
           <div class="card border-0 col purple mx-2 py-2 px-3">
-            <div class="pt-lg-5">
-              <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
-                alt=""
-              />
+            <div class="pt-lg-5 if">
+              <img class="text-center py-2 gif" src="./images/art.png" alt="" />
             </div>
             <div class="d-flex justify-content-between">
               <div class="py-3">
@@ -242,8 +238,8 @@
           <div class="card border-0 col pink mx-2 py-2 px-3">
             <div class="pt-lg-5">
               <img
-                class="text-center py-2"
-                src="./images/Image-Container (2).png"
+                class="text-center py-2 gif"
+                src="./images/arsenals.png"
                 alt=""
               />
             </div>
@@ -290,7 +286,7 @@
             <div class="pt-lg-5">
               <img
                 class="text-center py-2 gif"
-                src="./images/sofa.png"
+                src="./images/Sofa.gif"
                 alt=""
               />
             </div>
