--- a/products/cooker.html
+++ b/products/cooker.html
@@ -135,7 +135,9 @@
       >
         <div class="row row-cyan">
           <div class="card-body col-md-4 justify-content-between mt-lg-5">
-            <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">Suitcase</h1>
+            <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">
+              Foldable Table
+            </h1>
             <div
               class="flextext justify-content-between align-items-sm-between py-lg-3"
             >
@@ -208,11 +210,11 @@
           </div>
           <div class="col-md-6 mx-md-4">
             <div class="img-fluid">
-              <img src="../images/suitcase.png" class="img-fluid" alt="..." />
+              <img src="../images/table.png" class="img-fluid" alt="..." />
             </div>
             <div>
               <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
-                <a class="nav-link" href="https://travelling-bag.swiftxr.app"
+                <a class="nav-link" href="https://foldable-table.swiftxr.app"
                   ><img src="../images/AR.png" class="vector" /> view in AR</a
                 >
               </button>
@@ -221,17 +223,17 @@
               >
                 <img
                   class="rounded thumbnail"
-                  src="../images/suitcase-thumb.png"
+                  src="../images/chairthumbnail.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/suitcase-thumb.png"
+                  src="../images/chair-thumbnail2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/suitcase-thumb.png"
+                  src="../images/chair-thumbnail3.png"
                   alt=""
                 />
               </div>
