--- a/products/mattress.html
+++ b/products/mattress.html
@@ -96,9 +96,7 @@
       >
         <div class="row row-cyan">
           <div class="card-body col-md-4 justify-content-between mt-lg-5">
-            <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">
-              Gaming Chair
-            </h1>
+            <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">Mattress</h1>
             <div
               class="flextext justify-content-between align-items-sm-between py-lg-3"
             >
@@ -175,7 +173,7 @@
             </div>
             <div>
               <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
-                <a class="nav-link" href="https://i4g-chair.swiftxr.app"
+                <a class="nav-link" href="https://matress.swiftxr.app"
                   ><img src="../images/AR.png" class="vector" /> view in AR</a
                 >
               </button>
