--- a/products/painting.html
+++ b/products/painting.html
@@ -141,7 +141,7 @@
         <div class="row row-cyan">
           <div class="card-body col-md-4 justify-content-between mt-lg-5">
             <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">
-              Gaming Chair
+              Wall Painting
             </h1>
             <div
               class="flextext justify-content-between align-items-sm-between py-lg-3"
