updated AR pages

--- a/products/mattress.html
+++ b/products/mattress.html
@@ -102,15 +102,6 @@
             >
               <div class="d-flex justify-content-between">
                 <span class="card-text fs-md-6">$149.00</span>
-                <!-- <small class="percent mx-2 px-2 rounded-1 align-self-center"
-                  >50%</small
-                >
-              </div>
-              <p>
-                <small class="text-muted-dollar align-self-center"
-                  >$250.00</small
-                >
-              </p> -->
                 <img src="../images/Ratings.png" class="ratings" />
               </div>
               <p class="card-text content mt-4 mt-md-2 fs-md-6 py-lg-4 py-sm-3">
@@ -169,7 +160,11 @@
           </div>
           <div class="col-md-6 mx-md-4">
             <div class="img-fluid">
-              <img src="../images/chair.png" class="img-fluid" alt="..." />
+              <img
+                src="../images/mattressweb.png"
+                class="img-fluid"
+                alt="..."
+              />
             </div>
             <div>
               <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
@@ -182,17 +177,17 @@
               >
                 <img
                   class="rounded thumbnail"
-                  src="../images/img1.png"
+                  src="../images/mattress-thumbnail1.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/img2.png"
+                  src="../images/mattress-thumbnail2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/img3.png"
+                  src="../images/mattress-thumbnail3.png"
                   alt=""
                 />
               </div>
