--- a/products/painting.html
+++ b/products/painting.html
@@ -228,17 +228,17 @@
               >
                 <img
                   class="rounded thumbnail"
-                  src="../images/img1.png"
+                  src="../images/art-thumb2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/img2.png"
+                  src="../images/art-thumb2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/img3.png"
+                  src="../images/art-thumb2.png"
                   alt=""
                 />
               </div>
