--- a/products/suitcase.html
+++ b/products/suitcase.html
@@ -226,12 +226,12 @@
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/suitcase-thumb.png"
+                  src="../images/suitcase2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/suitcase-thumb.png"
+                  src="../images/suitcase2.png"
                   alt=""
                 />
               </div>
