--- a/products/table.html
+++ b/products/table.html
@@ -210,7 +210,11 @@
           </div>
           <div class="col-md-6 mx-md-4">
             <div class="img-fluid">
-              <img src="../images/table.png" class="img-fluid" alt="..." />
+              <img
+                src="../images/foldable-table.png"
+                class="img-fluid"
+                alt="..."
+              />
             </div>
             <div>
               <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
@@ -223,17 +227,17 @@
               >
                 <img
                   class="rounded thumbnail"
-                  src="../images/chairthumbnail.png"
+                  src="../images/table-thumb1.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/chair-thumbnail2.png"
+                  src="../images/table-thumb2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/chair-thumbnail3.png"
+                  src="../images/table-thumb2.png"
                   alt=""
                 />
               </div>
