--- a/products/arsenal.html
+++ b/products/arsenal.html
@@ -189,12 +189,12 @@
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/arsenal-thumb.png"
+                  src="../images/arsenal-thumb2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/arsenal-thumb.png"
+                  src="../images/arsenal-thumb2.png"
                   alt=""
                 />
               </div>
