--- a/products/dining-table.html
+++ b/products/dining-table.html
@@ -136,7 +136,7 @@
         <div class="row row-cyan">
           <div class="card-body col-md-4 justify-content-between mt-lg-5">
             <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">
-              Foldable Table
+              Dining Table
             </h1>
             <div
               class="flextext justify-content-between align-items-sm-between py-lg-3"
@@ -210,11 +210,11 @@
           </div>
           <div class="col-md-6 mx-md-4">
             <div class="img-fluid">
-              <img src="../images/table.png" class="img-fluid" alt="..." />
+              <img src="../images/dining-set.png" class="img-fluid" alt="..." />
             </div>
             <div>
               <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
-                <a class="nav-link" href="https://foldable-table.swiftxr.app"
+                <a class="nav-link" href="https://dinning-table.swiftxr.app"
                   ><img src="../images/AR.png" class="vector" /> view in AR</a
                 >
               </button>
@@ -223,17 +223,17 @@
               >
                 <img
                   class="rounded thumbnail"
-                  src="../images/chairthumbnail.png"
+                  src="../images/dining1.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/chair-thumbnail2.png"
+                  src="../images/dining-thumb2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/chair-thumbnail3.png"
+                  src="../images/dining-thumb2.png"
                   alt=""
                 />
               </div>
