--- a/products/drawer.html
+++ b/products/drawer.html
@@ -135,9 +135,7 @@
       >
         <div class="row row-cyan">
           <div class="card-body col-md-4 justify-content-between mt-lg-5">
-            <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">
-              Gaming Chair
-            </h1>
+            <h1 class="card-title fs-sm-5 fw-bolder fs-md-6 pt-3">Drawer</h1>
             <div
               class="flextext justify-content-between align-items-sm-between py-lg-3"
             >
@@ -210,7 +208,7 @@
           </div>
           <div class="col-md-6 mx-md-4">
             <div class="img-fluid">
-              <img src="../images/chair.png" class="img-fluid" alt="..." />
+              <img src="../images/drawer.png" class="img-fluid" alt="..." />
             </div>
             <div>
               <button class="btn blue-bg px-md-2 py-sm-2 btn-lg mb-2 px-lg-3">
@@ -223,17 +221,17 @@
               >
                 <img
                   class="rounded thumbnail"
-                  src="../images/img1.png"
+                  src="../images/drawer-thumbnail1.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/img2.png"
+                  src="../images/drawer-thumbnail2.png"
                   alt=""
                 />
                 <img
                   class="rounded thumbnail"
-                  src="../images/img3.png"
+                  src="../images/drawer-thumbnail2.png"
                   alt=""
                 />
               </div>
